// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingElastic is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingElastic testClass1 testClass2 emotion-euiLoadingElastic-euiTestCss"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingElastic emotion-euiLoadingElastic"
  role="progressbar"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingElastic emotion-euiLoadingElastic"
  role="progressbar"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingElastic emotion-euiLoadingElastic"
  role="progressbar"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;

exports[`EuiLoadingElastic size xxl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingElastic emotion-euiLoadingElastic"
  role="progressbar"
>
  <span
    data-euiicon-type="logoElastic"
  />
</span>
`;
